assets/queries/k8s/network_policy_not_targeting_pods/test/positive_expected_result.json
[
	{
		"queryName": "Network Policy Is Not Targeting Any Pod",
		"severity": "MEDIUM",
		"line": 31
	}
]
